# RapidFetch

./: README.md  pyproject.toml
rapidfetch/: __init__.py  home.py  main.py
